--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,4 +15,25 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
+    <style name="FontGotham">
+        <item name="android:fontFamily">@font/gotham</item>
+    </style>
+
+    <style name="FontNanum">
+        <item name="android:fontFamily">@font/nanumsquare</item>
+    </style>
+
+    <style name="PassOrderTitle" parent="FontGotham">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">40sp</item>
+    </style>
+
+    <style name="Gotham_16sp" parent="FontGotham">
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="Nanum_16sp" parent="FontNanum">
+        <item name="android:textSize">16sp</item>
+    </style>
+
 </resources>
