이메일 로그인 버튼 진행 중

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="50dp"
-            android:text="welcome to"
+            android:text="@string/welcome_to"
             android:textColor="@color/white"
             android:textFontWeight="200"
             app:layout_constraintStart_toStartOf="parent"
@@ -44,10 +44,47 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="PASSORDER"
+            android:text="@string/pass_order_title"
             android:textFontWeight="700"
             app:layout_constraintStart_toStartOf="@+id/login_title_txt_01"
             app:layout_constraintTop_toBottomOf="@id/login_title_txt_01" />
+
+        <TextView
+            android:id="@+id/login_sign_up_email_txt"
+            style="@style/Nanum_14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="이메일로 회원가입하기"
+            android:textColor="@color/point_01"
+            android:textFontWeight="400"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/login_email_btn"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginBottom="24dp"
+            android:fontFamily="@font/nanumsquare"
+            android:gravity="center"
+            android:paddingVertical="16dp"
+            android:text="이메일로 로그인"
+            android:textAlignment="center"
+            android:textColor="@color/point_01"
+            android:textFontWeight="700"
+            android:textSize="16sp"
+            app:icon="@drawable/ic_email"
+            app:iconTint=""
+            app:iconGravity="textStart"
+            app:iconPadding="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/login_sign_up_email_txt"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:strokeColor="@color/point_01" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
