--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,29 +15,18 @@
         <item name="android:windowBackground">@color/white</item>
     </style>
 
-    <style name="FontGotham">
-        <item name="android:fontFamily">@font/gotham</item>
-    </style>
-
-    <style name="FontNanum">
-        <item name="android:fontFamily">@font/nanumsquare</item>
-    </style>
-
-    <style name="PassOrderTitle" parent="FontGotham">
-        <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">40sp</item>
-    </style>
-
-    <style name="Gotham_16sp" parent="FontGotham">
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="Nanum_16sp" parent="FontNanum">
-        <item name="android:textSize">16sp</item>
-    </style>
-
-    <style name="Nanum_14sp" parent="FontNanum">
-        <item name="android:textSize">16sp</item>
+    <style name="Email_Login_Button" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="backgroundTint">@color/white</item>
+        <item name="strokeColor">@color/point_01</item>
+        <item name="icon">@drawable/ic_email</item>
+        <item name="iconTint">@null</item>
+        <item name="iconGravity">textStart</item>
+        <item name="iconPadding">10dp</item>
+        <item name="cornerRadius">10dp</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="strokeWidth">1dp</item>
+        <item name="android:elevation">0dp</item>
     </style>
 
 </resources>
