--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,27 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <TextView
+            android:id="@+id/login_find_password_txt"
+            style="@style/Nanum_12sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/find_password"
+            android:textColor="@color/font_02"
+            android:padding="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/login_under_line"
+            app:layout_constraintEnd_toEndOf="@+id/login_email_btn" />
+
+        <View
+            android:id="@+id/login_under_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/line01"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toEndOf="@id/login_find_password_txt"
+            app:layout_constraintBottom_toTopOf="@+id/login_email_btn"
+            app:layout_constraintStart_toStartOf="@+id/login_find_password_txt" />
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/login_email_btn"
             style="@style/Email_Login_Button"
@@ -69,16 +90,16 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="20dp"
             android:layout_marginBottom="24dp"
+            android:backgroundTint="@color/white"
             android:fontFamily="@font/nanumsquare"
             android:gravity="center"
             android:paddingVertical="16dp"
             android:text="이메일로 로그인"
             android:textColor="@color/point_01"
-            android:backgroundTint="@color/white"
             android:textFontWeight="700"
             app:layout_constraintBottom_toTopOf="@+id/login_sign_up_email_txt"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
