--- a/app/src/main/res/values/text_styles.xml
+++ b/app/src/main/res/values/text_styles.xml
@@ -22,6 +22,10 @@
     </style>
 
     <style name="Nanum_14sp" parent="FontNanum">
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Nanum_12sp" parent="FontNanum">
+        <item name="android:textSize">12sp</item>
     </style>
 </resources>
