이메일,비밀번호 xml 세팅

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,6 +62,54 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/login_email_edt_layout"
+            style="@style/Nanum_14sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="이메일"
+            android:textColorHint="@color/point_01"
+            app:boxBackgroundColor="@android:color/transparent"
+            android:layout_marginBottom="12dp"
+            app:layout_constraintBottom_toTopOf="@+id/login_password_edt_layout"
+            app:layout_constraintEnd_toEndOf="@+id/login_password_edt_layout"
+            app:layout_constraintStart_toStartOf="@+id/login_password_edt_layout">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_email_edt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:lines="1"
+                android:paddingStart="4dp"
+                android:textColor="@color/point_01"
+                tools:ignore="RtlSymmetry" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/login_password_edt_layout"
+            style="@style/Nanum_14sp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:hint="비밀번호"
+            android:textColorHint="@color/point_01"
+            app:boxBackgroundColor="@android:color/transparent"
+            app:layout_constraintBottom_toTopOf="@+id/login_find_password_txt"
+            app:layout_constraintEnd_toEndOf="@+id/login_email_btn"
+            app:layout_constraintStart_toStartOf="@+id/login_email_btn">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/login_password_edt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword"
+                android:textColor="@color/point_01"
+                android:paddingStart="4dp"
+                android:lines="1"
+                tools:ignore="RtlSymmetry" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <TextView
             android:id="@+id/login_find_password_txt"
             style="@style/Nanum_12sp"
