--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,17 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="UnusedAttribute,HardcodedText">
 
     <data>
 
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".presentation.ui.singup.SignUpActivity">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/sign_up_appbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/sign_up_toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:navigationIcon="@drawable/ic_arrow_back" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <TextView
+            android:id="@+id/login_title_txt_01"
+            style="@style/Gotham_16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="50dp"
+            android:text="@string/welcome_to"
+            android:textColor="@color/point_01"
+            android:textFontWeight="200"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/login_title_txt_02"
+            style="@style/PassOrderTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="@string/pass_order_title"
+            android:textFontWeight="700"
+            app:layout_constraintStart_toStartOf="@+id/login_title_txt_01"
+            app:layout_constraintTop_toBottomOf="@id/login_title_txt_01"
+            tools:textColor="@color/point_01" />
+
+        <View
+            android:id="@+id/sign_up_line"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:background="@color/point_01"
+            app:layout_constraintStart_toStartOf="@+id/login_title_txt_02"
+            app:layout_constraintTop_toBottomOf="@+id/login_title_txt_02"
+            app:layout_constraintWidth_percent="0.04"
+            android:layout_marginTop="24dp"/>
+
+        <fragment
+            android:id="@+id/sign_up_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            app:defaultNavHost="true"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:navGraph = "@navigation/nav_sign_up"
+            app:layout_constraintBottom_toTopOf="@id/sign_up_next_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/sign_up_line" />
+
+        <TextView
+            android:id="@+id/sign_up_next_btn"
+            style="@style/Nanum_16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="다 음"
+            android:textColor="@color/point_01"
+            android:layout_marginBottom="50dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center"
+            android:textFontWeight="400"
+            android:drawablePadding="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:drawableEndCompat="@drawable/ic_keyboard_arrow_right" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
