--- a/app/src/main/res/navigation/nav_sign_up.xml
+++ b/app/src/main/res/navigation/nav_sign_up.xml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/nav_sign_up">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_sign_up"
+    app:startDestination="@id/emailFragment">
 
+    <fragment
+        android:id="@+id/emailFragment"
+        android:name="paytalab.clone.passorder.presentation.ui.singup.EmailFragment"
+        android:label="EmailFragment"
+        tools:layout="@layout/fragment_email"/>
 </navigation>
