--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:ignore="HardcodedText,UnusedAttribute">
+    tools:ignore="HardcodedText,UnusedAttribute,TextFields">
 
     <data>
 
@@ -15,6 +15,7 @@
         tools:context=".presentation.ui.singup.EmailFragment">
 
         <TextView
+            android:id="@+id/sign_up_email_title"
             style="@style/Nanum_20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -25,6 +26,32 @@
             android:layout_marginStart="20dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/sign_up_email_txt"
+            style="@style/Nanum_16sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이메일"
+            android:textColor="@color/point_01"
+            android:textFontWeight="700"
+            android:layout_marginTop="44dp"
+            app:layout_constraintStart_toStartOf="@+id/sign_up_email_title"
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_title" />
+
+        <EditText
+            android:id="@+id/sign_up_email_edt"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="abcd@efgh"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            style="@style/Nanum_14sp"
+            android:textColor="@color/point_01"
+            android:paddingVertical="20dp"
+            app:layout_constraintStart_toStartOf="@+id/sign_up_email_txt"
+            app:layout_constraintTop_toBottomOf="@+id/sign_up_email_txt"
+            android:importantForAutofill="no" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
