--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,7 @@
         <item name="android:windowBackground">@color/white</item>
 
         <!-- for EditText Color -->
+        <item name="colorControlNormal">@color/font_02</item>
         <item name="colorOnSurface">@color/point_01</item>
     </style>
 
