포커스 해제 및 키보드 리스너 추가, 뷰모델 생성

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,12 +6,17 @@
 
     <data>
 
+        <variable
+            name="viewModel"
+            type="paytalab.clone.passorder.presentation.ui.signup.SignUpViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/sign_up_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ui.singup.SignUpActivity">
+        tools:context=".presentation.ui.signup.SignUpActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/sign_up_appbar"
