--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -70,6 +70,18 @@
             app:layout_constraintWidth_percent="0.04"
             android:layout_marginTop="24dp"/>
 
+        <TextView
+            android:id="@+id/sign_up_email_title"
+            style="@style/Nanum_20sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이메일로 회원가입하기"
+            android:textColor="@color/point_01"
+            android:textFontWeight="700"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@id/sign_up_line"
+            app:layout_constraintStart_toStartOf="@id/sign_up_line"/>
+
         <fragment
             android:id="@+id/sign_up_fragment"
             android:name="androidx.navigation.fragment.NavHostFragment"
@@ -80,7 +92,7 @@
             app:layout_constraintBottom_toTopOf="@id/sign_up_next_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sign_up_line" />
+            app:layout_constraintTop_toBottomOf="@id/sign_up_email_title" />
 
         <TextView
             android:id="@+id/sign_up_next_btn"
