전환 애니메이션 추가

--- a/app/src/main/res/layout/fragment_password.xml
+++ b/app/src/main/res/layout/fragment_password.xml
@@ -40,9 +40,10 @@
             android:layout_marginEnd="20dp"
             style="@style/Nanum_14sp"
             android:textColor="@color/point_01"
-            android:text="@={viewModel.email}"
+            android:text="@={viewModel.password}"
             android:paddingVertical="20dp"
             android:ellipsize="end"
+            android:lines="1"
             app:layout_constraintStart_toStartOf="@+id/sign_up_password_txt"
             app:layout_constraintTop_toBottomOf="@+id/sign_up_password_txt"
             android:importantForAutofill="no" />
