--- a/app/src/main/res/layout/fragment_email.xml
+++ b/app/src/main/res/layout/fragment_email.xml
@@ -43,6 +43,7 @@
             android:text="@={viewModel.email}"
             android:paddingVertical="20dp"
             android:ellipsize="end"
+            android:lines="1"
             app:layout_constraintStart_toStartOf="@+id/sign_up_email_txt"
             app:layout_constraintTop_toBottomOf="@+id/sign_up_email_txt"
             android:importantForAutofill="no" />
